testsuite/poke.pkl/ass-diag-6.pk
/* { dg-do compile } */

(struct {a=10,b=20}).b = 10; /* { dg-error "invalid l-value" } */
